[project]
name = "techwtimaiplay"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.23",
    "langchain-anthropic>=0.3.12",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.14",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "wikipedia>=1.4.0",
]
